# hydra

./: .cursorrules  .env  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  .hintrc  .prettierignore  .prettierrc.cjs  .prettierrc.js  .prettierrc.yaml  .python-version  BUILD_MACOS.md  CLAUDE.md  Dockerfile  Future-updates.md  LICENSE  LICENSE-ASDF-OVERLAY  MAIN_VITE_AUTH_URL.env  README-pt.md  README.ar.md  README.be.md  README.cs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.md  README.nb.md  README.pl.md  README.pt-BR.md  README.pt-br.md  README.ru.md  README.ua.md  README.uk-UA.md  README.uk.md  SECURITY.md  (+38 more)
.claude/: settings.local.json
.github/: pull-request-template.md
.husky/: pre-commit  pre-push
.storybook/: app.css.ts  main.ts  preview.ts
aria2/: ChangeLog  README.html  aria2c
binaries/: 7zzs
docs/: README.ar.md  README.be.md  README.cs.md  README.da.md  README.de.md  README.ee.md  README.es.md  README.et.md  README.fr.md  README.it.md  README.nb.md  README.pl.md  README.pt-BR.md  README.ru.md  README.tr.md  README.uk-UA.md  achievement-notification-customizer-implemented.md  achievement-notification-customizer-remaining.md  testing-webdav.md
flatpak/: README.md  electron-wrapper  gg.hydralauncher.hydra.desktop  gg.hydralauncher.hydra.metainfo.xml  gg.hydralauncher.hydra.yaml
ludusavi/: config.yaml
native/: package-lock.json
native/hydra-native/: Cargo.toml  build.rs
native/hydra-native/cpp/: bridge_state.cc  bridge_state.h  bridge_utils.cc  bridge_utils.h  libtorrent_bridge.cc  libtorrent_bridge.h  torrent_helpers.cc  torrent_helpers.h
native/hydra-native/src/: constants.rs  lib.rs  libtorrent_bridge.rs  move_engine.cc  torrent.rs  torrent_libtorrent.rs
native/hydra-native/src/cloud_save/: mod.rs  pipeline.rs
native/hydra-native/src/cloud_save/comparison/: compare.rs  mod.rs  select_remote.rs  types.rs
native/hydra-native/src/cloud_save/hashing/: aggregate.rs  batch.rs  file.rs  mod.rs  types.rs
native/hydra-native/src/cloud_save/identity/: mod.rs
native/hydra-native/src/cloud_save/local_snapshot/: build.rs  build_file.rs  build_files.rs  guardrails.rs  mod.rs  types.rs
native/hydra-native/src/cloud_save/manifest/: cache.rs  indexer.rs  lookup.rs  mod.rs  rules.rs  source.rs  types.rs
native/hydra-native/src/cloud_save/path_resolution/: candidates.rs  capture.rs  context.rs  mod.rs  resolve_path.rs  resolve_rules.rs  restore_root.rs  tokens.rs  types.rs
native/hydra-native/src/cloud_save/pipeline/: mod.rs  types.rs
native/hydra-native/src/cloud_save/restore/: delete_targets.rs  download_blob.rs  metadata.rs  mod.rs  replace_targets.rs  resolve_targets.rs  should_skip_file.rs  types.rs  validation.rs  verify_file.rs
native/hydra-native/src/cloud_save/save_scanner/: glob.rs  mod.rs  scan_path.rs  scan_rules.rs  types.rs  walk.rs
native/hydra-native/src/cloud_save/upload/: mod.rs  upload_blob.rs
python_rpc/: fichier_downloader.py  http_downloader.py  http_multi_link_downloader.py  main.py  profile_image_processor.py  setup.py  torrent_downloader.py
resources/: hydra-launcher.desktop  hydra.vbs  hydralauncher.vbs
rust/: .gitattributes  .yarnrc.yml  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package.json
rust_rpc/: Cargo.toml
rust_rpc/src/: main.rs
src/: globals.ts  (+5 more)
(+2467 files in other folders)
