[package]
name = "hydra-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
image = { version = "0.25.8", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
mime_guess = "2.0.5"
napi = { version = "3.5.2", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3.3.2"
sysinfo = "0.37.2"
tokio = { version = "1.52", features = ["fs", "rt", "sync", "macros"] }
uuid = { version = "1.11.0", features = ["v4"] }
reqwest = "0.13"
indexmap = { version = "2.14", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10"
unicode-normalization = "0.1.25"
globset = "=0.4.15"
globetter = "=0.2.0"
walkdir = "=2.5.0"
blake3 = "=1.8.5"
rayon = "=1.11.0"
time = "=0.3.44"

[target.'cfg(windows)'.dependencies]
known-folders = "=1.2.0"

[dev-dependencies]
tempfile = "3.27"

[build-dependencies]
napi-build = "2.3.1"
