[package]
name = "hydra-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { version = "0.25.8", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
mime_guess = "2.0.5"
napi = { version = "3.5.2", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3.3.2"
sysinfo = "0.37.2"
tokio = { version = "1.50.0", features = ["rt"] }
uuid = { version = "1.11.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
napi-build = "2.3.1"
